# stencil

./: .gitignore  CMakeLists.txt
benchmarks/: 2D9P_generic_v512_bench.cpp  CMakeLists.txt  baseline_bench.cpp  omp_bench.cpp
kernels/: 2D9P_generic_v512.cpp  2D9P_generic_v512.hpp  CMakeLists.txt  baseline.cpp  baseline.hpp  omp_kernels.cpp  omp_kernels.hpp
tests/: 2D9P_generic_v512_test.cpp  CMakeLists.txt  omp_kernels_test.cpp
util/: CMakeLists.txt  util.hpp
